[gd_scene load_steps=2 format=3 uid="uid://d8q7v0j6y5n3q"]

[ext_resource type="Script" path="res://addons/netfox.extras/spell/spell-page.gd" id="1_4k4m3"]

[node name="SpellPage" type="Node3D"]
script = ExtResource("1_4k4m3")

[node name="PageMesh" type="MeshInstance3D" parent="."]

[node name="InfoContainer" type="Node3D" parent="."]

[node name="EffectsContainer" type="Node3D" parent="."] 